--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,9 +1,9 @@
 import { prefix } from "../utils/prefix.js"
 import Bleed from 'nextra-theme-docs/bleed'
 
-# Cabra
+# Ibex Documentation
 
-**Cabra** is a [Next.js](https://nextjs.org) based static site generator.
+**Ibex Documentation** is a [Next.js](https://nextjs.org) based static site generator.
 
 It supports Markdown and React components ([MDX](/features/mdx)), automatically generated [sidebar and anchor links](/get-started#sidebar-and-anchor-links), file-system based routing, built-in syntax highlighting, image optimization, custom layouts, i18n, and all the features you love about Next.js.
 
