--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,12 +1,8 @@
 import { prefix } from "../utils/prefix.js"
 import Bleed from 'nextra-theme-docs/bleed'
 
-# Ibex Documentation
+# Ibex Docs
 
-**Ibex Documentation** is a [Next.js](https://nextjs.org) based static site generator.
+**Ibex Docs** uses [Nextra](https://nextra.vercel.app/), a [Next.js](https://nextjs.org) based static site generator.
 
 It supports Markdown and React components ([MDX](/features/mdx)), automatically generated [sidebar and anchor links](/get-started#sidebar-and-anchor-links), file-system based routing, built-in syntax highlighting, image optimization, custom layouts, i18n, and all the features you love about Next.js.
-
-Here's what you will get in 1 minute:
-
-<Bleed>![Nextra Example](`${prefix}/demo.png`)</Bleed>
