--- a/pages/Ibex/components/roster.mdx
+++ b/pages/Ibex/components/roster.mdx
@@ -15,10 +15,10 @@ explain the folder structure of the section
     - **/Board/index.js:** _board component point of entry, contains most of the logic of the board_
     - **/Board/Options.js:** _contains all the filters & search bar logic_
     <br/>
-  - **/ChannelAddSearch:** contains the channel add search of the section
-    - **/ChannelAddSearch/Card.js:**
+  - **/ChannelAddSearch:** contains the channel add channel modal. This modal is used to add a new CLC to your list
+    - **/ChannelAddSearch/Card.js:** card component for the channel search results
     - **/ChannelAddSearch/Hits.js:**
-    - **/ChannelAddSearch/index.js:**
+    - **/ChannelAddSearch/index.js:** point of entry for the modal
     <br/>
   - **/ExclusionBoard:** contains the exclusion board of the section. Not really a board(with lanes), more a cork board with cards for each excluded influencer
     - **/ExclusionBoard/Card.js:**
