created full folder/file frame for cabra & Ibex

--- a/pages/ibex/repo/src/components/roster.mdx
+++ b/pages/ibex/repo/src/components/roster.mdx
@@ -3,7 +3,7 @@ explain the folder structure of the section
   - how do they connects
   - how to add new files
 
-**glosary of terms:**
+**glossary of terms:**
 - CLC: Campaign List Channel
 
 ### Folder structure:
