changes to the introduction and how to guides

--- a/pages/cabra/repo/github.mdx
+++ b/pages/cabra/repo/github.mdx
@@ -1,1 +1,4 @@
-  # .github / workflows
+# .github / workflows
+
+In this folder we keep the github workflow files that trigger the background jobs carried by github actions.
+The workflows are triggered by events such as pull requests, pushes, etc. The workflows are defined in yaml files.
