--- a/pages/how/write-docs.mdx
+++ b/pages/how/write-docs.mdx
@@ -7,24 +7,13 @@ Documentation effectively connects humans and machines.
 - For you:
   - You will be using your code in 6 months
   - You want people to use your code and give you credit
-  - You want to learn self-determination
   - Others would be encouraged to contribute to your code
   <br/>
 - For others:
   - Others can easily use your code and build upon it
   <br/>
-- For science:
-  - Advance the science
-  - Encourage open science
-  - Allow reproducibility and transparency
 
-What should you document about your research? Everything! All the data, notes, code, and materials someone else would need to reproduce your work.
-
-Consider the following questions:
-
-- **How is your data gathered?**
-- **What variables did you use?**
-- **Did you use any code to clean/analyze your data?**
+What should you document about your code? Everything! All the data, notes, code, and materials someone else would need to reproduce your work.
 
 #### Best Practices for Writing Documentation:
 
@@ -40,14 +29,5 @@ Consider the following questions:
 4. Document your code
 5. Apply coding conventions, such as file organization, comments, naming conventions, programming practices, etc.
 6. Include information for contributors
-7. Include citation information
-8. Include licensing information
-9. Link to your e-mail address at the end
-10. List all the versions of the files along with the major edits you did in each version
-### An important tip: Naming files should be descriptive and consistent!
-
-- Date format (ISO 8601 Standard): YYYYMMDDThhmmss
-- Make file names sortable and searchable:
-  - Project or experiment name
-  - Researcher name/initials
-  - Date or date range of collection version
+7. Include licensing information
+8. List all the versions of the files along with the major edits you did in each version
