--- a/pages/cabra/about.mdx
+++ b/pages/cabra/about.mdx
@@ -7,14 +7,18 @@ It is a living, breathing system that is constantly being updated and improved. 
 Cabra means Goat in spanish, need I say more?
 
 ## Code
-The cabra repository is _"divided"_ into two parts, the `NPM` folder and everything else. The `NPM` folder contains the styles and React components of the Cabra system.
-And it is our NPM package, so if you need to publish a new version of our _**Cabra**_ NPM package, make sure that your terminal is working from this directory.
+The [Cabra](https://github.com/Ibex-CRM/Cabra) repository is _"divided"_ into two parts, the `NPM` folder and everything else.
 
-The rest of the repository is the documentation website, which is built using [Nextra](https://nextra.vercel.app/). The documentation website is built using ([MDX](/features/mdx)) and the components and styles from the `NPM` folder.
-([MDX](/features/mdx)) accepts Markdown and React, so just import the components you need and use them in your markdown files.
+The `NPM` folder contains the style Tokens and React components of the Cabra system and it is our NPM package.
+So if you need to publish a new version of our [Cabra NPM Package](https://www.npmjs.com/package/cabra), make sure that your terminal is working from this directory.
 
-## How to use Cabra
-When creating a new component you should create a documentation page for it at the same time and import the component there. This way you can see how the component looks in real time when working on it and creates the documentation at the same time.
+The rest of the repository is the documentation website, which is built using [Nextra](https://nextra.vercel.app/).
+The documentation website is built using [MDX](https://mdxjs.com/) and the components and styles from the `NPM` folder.
+[MDX](https://mdxjs.com/) accepts Markdown and React, so just import the components you need and use them in your markdown files.
+
+## How to use Cabra NPM
+When creating a new component you should create a documentation page for it at the same time and import the component there.
+This way you can see how the component looks in real time when working on it and creates the documentation at the same time.
 
 When you are done, simply write a few more lines about using the component in docs, import/export your brand new component to the **index.js** file and you are done.
 
@@ -24,3 +28,7 @@ Lastly don't forget to publish the new version of the NPM package. You can do th
 npm version 1.0.5
 npm publish
 ```
+
+## How to use Cabra Docs
+
+For this one I'm going to refer you to [Nextra](https://nextra.vercel.app/), because it is very well written and easy to follow. Plus you will notice that it looks very similar to this docs...
