--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -5,14 +5,14 @@ import Bleed from 'nextra-theme-docs/bleed'
 
 **Goat Dev Docs** uses [Nextra](https://nextra.vercel.app/), a [Next.js](https://nextjs.org) based static site generator.
 
-It supports Markdown and React components ([MDX](/features/mdx)),
-automatically generated [sidebar and anchor links](/get-started#sidebar-and-anchor-links), file-system based routing,
+It supports Markdown and React components ([MDX](https://mdxjs.com/)),
+automatically generated sidebar and anchor links, file-system based routing,
 built-in syntax highlighting, image optimization, custom layouts, i18n, and all the features you love about Next.js.
 
 
 ## Why use Nextra?
 
-The main reason to use [Nextra](https://nextra.vercel.app/) and [MDX](/features/mdx) for the Goat Dev Docs instead of tools
+The main reason to use [Nextra](https://nextra.vercel.app/) and [MDX](https://mdxjs.com/) for the Goat Dev Docs instead of tools
 like [Notion](https://www.notion.so/), which we use for other purposes, is the support of [React](https://reactjs.org/)
 components inside our Markdown files. This allows us to create custom components that are specific to our documentation.
 
