added basic docs for pod section

--- a/pages/how/set-laptop.mdx
+++ b/pages/how/set-laptop.mdx
@@ -536,7 +536,7 @@ For Example for our server side production remote:
 
 ```bash
 heroku git:remote -a mountain-goat-server
-git remote rename mountain-goat-server production
+git remote rename heroku production
 ```
 
 ## DataBase
