--- a/pages/ibex/repo/src/components/roster/about.mdx
+++ b/pages/ibex/repo/src/components/roster/about.mdx
@@ -15,27 +15,27 @@ explain the folder structure of the section
     - **/Board/index.js:** _board component point of entry, contains most of the logic of the board_
     - **/Board/Options.js:** _contains all the filters & search bar logic_
     <br/>
-  - **/ChannelAddSearch:** contains the channel add channel modal. This modal is used to add a new CLC to your list
-    - **/ChannelAddSearch/Card.js:** card component for the channel search results
-    - **/ChannelAddSearch/Hits.js:**
-    - **/ChannelAddSearch/index.js:** point of entry for the modal
+  - **/ChannelAddSearch:** _contains the channel add channel modal. This modal is used to add a new CLC to your list_
+    - **/ChannelAddSearch/Card.js:** _card component for the channel search results_
+    - **/ChannelAddSearch/Hits.js:** _contains the search results_
+    - **/ChannelAddSearch/index.js:** _point of entry for the search modal_
     <br/>
-  - **/ExclusionBoard:** contains the exclusion board of the section. Not really a board(with lanes), more a cork board with cards for each excluded influencer
-    - **/ExclusionBoard/Card.js:**
-    - **/ExclusionBoard/index.js:**
+  - **/ExclusionBoard:** _contains the exclusion board of the section. Not really a board(with lanes), more a cork board with cards for each excluded influencer_
+    - **/ExclusionBoard/Card.js:** _contains the card for the exclusion board, each contains links to open every channel of that influencer on the sidebar_
+    - **/ExclusionBoard/index.js:** _point of entry for the exclusion board_
     <br/>
-  - **/Sidebar:** contains the sidebar of the section
-    - **/Sidebar/_StyledComponents.js:** contains shared styled components for the sidebar
-    - **/Sidebar/AboutSection.js:**
-    - **/Sidebar/BioSection.js:**
-    - **/Sidebar/CampaignSection.js:**
-    - **/Sidebar/DemographicsSection.js:**
-    - **/Sidebar/index.js:**
-    - **/Sidebar/MessagesSection.js:**
-    - **/Sidebar/TagsSection.js:**
-    - **/Sidebar/TraitsSection.js:**
+  - **/Sidebar:** _contains the sidebar of the section_
+    - **/Sidebar/_StyledComponents.js:** _contains shared styled components for the sidebar_
+    - **/Sidebar/AboutSection.js:** _contains the influencer about and the mutation to modify an influencers About_
+    - **/Sidebar/BioSection.js:** _Is here that we query for the influencers previous bios & contains the mutation to modify an influencers Bio_
+    - **/Sidebar/CampaignSection.js:** _It shows all the campaigns the influencer has been used, contains the "Pill" dropdowns and the styled components used for them_
+    - **/Sidebar/DemographicsSection.js:** _Shows the influencer's demographic info_
+    - **/Sidebar/index.js:** _point of entry for the sidebar, it has the query for the influencer we want to see in the sidebar and the logic to close the sidebar if clicking outside of it_
+    - **/Sidebar/MessagesSection.js:** _Shows the messages exchanged on this CLC, contains the mutation to create Messages_
+    - **/Sidebar/TagsSection.js:** _Shows the tags assigned to this channel_
+    - **/Sidebar/TraitsSection.js:** _Shows the traits assigned to this channel, contains the query and mutation to update the traits_
     <br/>
-  - **_StyleComponents.js:** contains shared styled components for the section
-  - **BoardWrapper.js:** contains the wrapper for the board
-  - **index.js:** contains the main component for the section
-  - **OutreachBoard.js:** contains the outreach board
+  - **_StyleComponents.js:** _contains shared styled components for the whole Roster
+  - **BoardWrapper.js:** _contains the wrapper for the board, it contains the logic for excluding influencers and rejecting channels (including the rejection messages), it also query for the campaign Lists that this campaign has and allows you to choose which one to show on the board_
+  - **index.js:** _contains the main component for the section, selection tab logic is here_
+  - **OutreachBoard.js:** _contains the outreach board which is still under development. For now it is very similar to an old version of the roster board and assigns every clc to the same column Needs work_
