--- a/pages/ibex/repo/src/components/OneOffs/podDashboard.mdx
+++ b/pages/ibex/repo/src/components/OneOffs/podDashboard.mdx
@@ -15,7 +15,7 @@ explain the folder structure of the section
 ### All new files related to Pod Section
 This section is added inside the src/_components/OneOffs because the settings are located here and the side bar too. But, if in the future we need to move it (To use as general dashboard for example) we can take the /OneOffs/PodDashboard folder and move it as the feature is self contain within this folder. Some changes on imports and exports should be all that is needed.
 
-The next list of files will be a direct representation of the file structure and a brief explanation of what they content and how they connect. For more specific information check the code & comments. Or ask Me @Carlos-Diaz-07, I'll try to help if I remember anything 👴 🧠 🔥 .
+The next list of files will be a direct representation of the file structure and a brief explanation of what they content and how they connect. For more specific information check the code & comments. Or ask Me [@Carlos-Diaz-07](https://github.com/carlos-diaz-07), I'll try to help if I remember anything 👴 🧠 🔥 .
 
 **/PodDashboard**:
 * **/_ concerns _**:
