--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,8 @@
 import { prefix } from "../utils/prefix.js"
 
-# Goat Dev Docs
+# Ibex User documentation
 
-**Goat Dev Docs** uses [Nextra](https://nextra.vercel.app/), a [Next.js](https://nextjs.org) based static site generator.
+**Ibex User documentation** uses [Nextra](https://nextra.vercel.app/), a [Next.js](https://nextjs.org) based static site generator.
 
 It supports Markdown and React components ([MDX](https://mdxjs.com/)),
 automatically generated sidebar and anchor links, file-system based routing,
@@ -11,7 +11,7 @@ built-in syntax highlighting, image optimization, custom layouts, i18n, and all 
 
 ## Why use Nextra?
 
-The main reason to use [Nextra](https://nextra.vercel.app/) and [MDX](https://mdxjs.com/) for the Goat Dev Docs instead of tools
+The main reason to use [Nextra](https://nextra.vercel.app/) and [MDX](https://mdxjs.com/) for the Ibex User documentation instead of tools
 like [Notion](https://www.notion.so/), which we use for other purposes, is the support of [React](https://reactjs.org/)
 components inside our Markdown files. This allows us to create custom components that are specific to our documentation.
 
