--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 import { prefix } from "../utils/prefix.js"
 
-# Ibex User documentation - 2024
+# Ibex User documentation - 2024 V2.0.0
 
 **Ibex User documentation** uses [Nextra](https://nextra.vercel.app/), a [Next.js](https://nextjs.org) based static site generator.
 
