--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,11 +2,17 @@ import { prefix } from "../utils/prefix.js"
 
 # Ibex User documentation - 2024 V2.0.0
 
-**Ibex User documentation** uses [Nextra](https://nextra.vercel.app/), a [Next.js](https://nextjs.org) based static site generator.
+**Ibex User documentation** 
 
-It supports Markdown and React components ([MDX](https://mdxjs.com/)),
-automatically generated sidebar and anchor links, file-system based routing,
-built-in syntax highlighting, image optimization, custom layouts, i18n, and all the features you love about Next.js.
+# Ibex Dashboard User Documentation
+
+This document provides a comprehensive guide to using the Ibex dashboard located at https://ibex.goatagency.com/dashboard. It covers key features, functionalities, and common workflows to help you effectively manage your campaigns and data.
+
+## 1. Getting Started
+
+* **Logging In:** Access the Ibex dashboard by navigating to https://ibex.goatagency.com/dashboard in your web browser. Enter your provided username and password, then click "Login". Contact your administrator if you have forgotten your credentials.
+* **Dashboard Overview:** Upon successful login, you'll be presented with the main dashboard. This provides a high-level overview of your key metrics and campaign performance. Familiarize yourself with the layout and available information.
+
 
 
 ## Why use Nextra?
