--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,28 +1,25 @@
 import { prefix } from "../utils/prefix.js"
 
-# Ibex User documentation - 2024 V2.0.0
+# Ibex User Documentation - 2024 V2.0.0
 
-**Ibex User documentation** 
+**Introduction** 
 
-# Ibex Dashboard User Documentation
-
-This document provides a comprehensive guide to using the Ibex dashboard located at https://ibex.goatagency.com/dashboard. It covers key features, functionalities, and common workflows to help you effectively manage your campaigns and data.
+These documents provide a guide to using the Ibex app dashboard and the tools contained within it. Covering key features, use cases and how to use the applications, outlining common questions and workflows to help you effectively manage your campaigns and leverage our data to make effective data-backed decisions in campaign planning and activation.
 
 ## 1. Getting Started
 
-* **Logging In:** Access the Ibex dashboard by navigating to https://ibex.goatagency.com/dashboard in your web browser. Enter your provided username and password, then click "Login". Contact your administrator if you have forgotten your credentials.
-* **Dashboard Overview:** Upon successful login, you'll be presented with the main dashboard. This provides a high-level overview of your key metrics and campaign performance. Familiarize yourself with the layout and available information.
+* **Logging In:** 
+Access the Ibex dashboard by navigating to https://ibex.goatagency.com/dashboard in your web browser. Select 'Login with Okta' and enter your username and password credentials that you use to access your computer or any WPP Okta 2FA applications or services, then click "Login". Contact your administrator if you have forgotten your credentials.
+
+* **Dashboard Overview:** Upon successful login, you'll be presented with the main dashboard. This is the entry point for all the available apps, services and resources. Familiarise yourself with the layout and available information. Some features contain sensitive cost data the should be used with care alongside services are only available in certain regions namley UK and US.
+
+## What to expect
+As the initial release of these apps there will be a learning curve to effectivly use these apps. Traning will be provided but please do reach out to the teams for support if you are in doubt of how to utalise the apps or if you have any quesions or suggestions.
+
+These are internally developed apps and tools that have been designed with the best available knowledge and understanding for how they could be used. We accept and understand that the reality of using these may be different in real world use. We have control over the ongoing development and roadmap and are always open to ideas and suggestions of how we can improve or introduce new initiatives. Our teams are here to support the evaluation and implementation of improvments, bug fixes, updates or new ideas. 
+
+You can submit your suggestions or ideas using the form below. Weather this is a small bug fix or a big idea we want to hear it.
 
 
 
-## Why use Nextra?
-
-The main reason to use [Nextra](https://nextra.vercel.app/) and [MDX](https://mdxjs.com/) for the Ibex User documentation instead of tools
-like [Notion](https://www.notion.so/), which we use for other purposes, is the support of [React](https://reactjs.org/)
-components inside our Markdown files. This allows us to create custom components that are specific to our documentation.
-
-At the same time we are still writing in Markdown which allows us to migrate everything to [Notion](https://www.notion.so/)
-easily, albeit with some loss of functionality.
-
-Also, everything is save in a [github](https://github.com/Ibex-CRM/ibex-user-docs) repository, so we can easily make changes
-and collaborate on the documentation.
+Also, everything is saved in a [GitHub](https://github.com/Ibex-CRM/ibex-user-docs) repository, so we can easily make changes and collaborate on the documentation.
