Update to introduction and benchmark page

--- a/pages/InfluencerSearch/InfluSearch.mdx
+++ b/pages/InfluencerSearch/InfluSearch.mdx
@@ -1,2 +1,2 @@
 ### Influencer Search
-Use this application to search through our database of previously activated creators
+Use this application to search through our database of previously activated creators with performance insights and campaign information
