--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,25 +1,39 @@
 import { prefix } from "../utils/prefix.js"
 
-# Ibex User Documentation - 2024 V2.0.0
+# Ibex User Documentation
 
-**Introduction** 
-
-These documents provide a guide to using the Ibex app dashboard and the tools contained within it. Covering key features, use cases and how to use the applications, outlining common questions and workflows to help you effectively manage your campaigns and leverage our data to make effective data-backed decisions in campaign planning and activation.
+Welcome to the Ibex dashboard documentation. Here you'll find comprehensive guides for using our suite of tools and applications. Learn how to manage campaigns effectively and make data-driven decisions using our powerful platform.
 
 ## 1. Getting Started
 
-* **Logging In:** 
-Access the Ibex dashboard by navigating to https://ibex.goatagency.com/dashboard in your web browser. Select 'Login with Okta' and enter your username and password credentials that you use to access your computer or any WPP Okta 2FA applications or services, then click "Login". Contact your administrator if you have forgotten your credentials.
+### Logging In
+1. Navigate to [Ibex Dashboard](https://ibex.goatagency.com/dashboard)
+2. Click 'Login with Okta'
+3. Enter your WPP Okta credentials (same as your computer login)
+4. Complete the 2FA verification if prompted
+5. Contact your administrator if you need help with access
 
-* **Dashboard Overview:** Upon successful login, you'll be presented with the main dashboard. This is the entry point for all the available apps, services and resources. Familiarise yourself with the layout and available information. Some features contain sensitive cost data the should be used with care alongside services are only available in certain regions namley UK and US.
+### Dashboard Overview
+Once logged in, you'll see the main dashboard - your central hub for all applications and services. Take time to explore the interface and available features. Note that:
+- Some features contain sensitive cost data
+- Certain services are only available in the UK and US regions
+- Each tool has specific access permissions based on your role
 
-## What to expect
-As the initial release of these apps there will be a learning curve to effectivly use these apps. Traning will be provided but please do reach out to the teams for support if you are in doubt of how to utalise the apps or if you have any quesions or suggestions.
+## 2. Support and Training
 
-These are internally developed apps and tools that have been designed with the best available knowledge and understanding for how they could be used. We accept and understand that the reality of using these may be different in real world use. We have control over the ongoing development and roadmap and are always open to ideas and suggestions of how we can improve or introduce new initiatives. Our teams are here to support the evaluation and implementation of improvments, bug fixes, updates or new ideas. 
+### Available Resources
+- Team training sessions for all key applications
+- Regular documentation updates
+- Team support for specific questions
+- Technical assistance for any issues
 
-You can submit your suggestions or ideas using the form below. Weather this is a small bug fix or a big idea we want to hear it.
+### Feedback and Improvements
+We continuously develop and enhance our applications based on your needs. Share your ideas through:
+- The feedback form below
+- Direct communication with your team lead
+- Monthly improvement workshops
 
+Whether you've spotted a small bug or have a major feature request, we welcome all feedback to help improve the platform.
 
-
-Also, everything is saved in a [GitHub](https://github.com/Ibex-CRM/ibex-user-docs) repository, so we can easily make changes and collaborate on the documentation.
+Best regards,
+Team Ibex
