--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -29,27 +29,7 @@ Once logged in, you'll see the main dashboard - your central hub for all applica
 
 ### Ibex support channel
 
-import React from 'react';
-
-export const SlackJoinButton = () => {
-  return (
-    <a 
-      href="https://thegoatagency.slack.com/archives/C089WQJ69LM"
-      className="inline-block bg-[#4A154B] text-white px-4 py-2 rounded-md hover:bg-[#4A154B]/95 transition-colors duration-200 ease-in-out"
-    >
-      Join Ibex Support
-      <svg 
-        xmlns="http://www.w3.org/2000/svg" 
-        width="24" 
-        height="24" 
-        viewBox="0 0 124 124" 
-        className="ml-2 inline-block fill-white align-middle"
-      >
-        <path d="M26.4 77.8c0 9.5-7.7 17.2-17.2 17.2S-8 87.3-8 77.8s7.7-17.2 17.2-17.2h17.2v17.2zm8.6 0c0-9.5 7.7-17.2 17.2-17.2s17.2 7.7 17.2 17.2v43c0 9.5-7.7 17.2-17.2 17.2S35 130.3 35 120.8v-43zM52 26.4c-9.5 0-17.2-7.7-17.2-17.2S42.5-8 52-8s17.2 7.7 17.2 17.2v17.2H52zm0 8.6c9.5 0 17.2 7.7 17.2 17.2S61.5 69.4 52 69.4H9c-9.5 0-17.2-7.7-17.2-17.2S-.5 35 9 35h43zM103.6 52c9.5 0 17.2 7.7 17.2 17.2S113.1 86.4 103.6 86.4H86.4V52h17.2zm-8.6 0c0 9.5-7.7 17.2-17.2 17.2S60.6 61.5 60.6 52V9c0-9.5 7.7-17.2 17.2-17.2S95 -.5 95 9v43z"/>
-      </svg>
-    </a>
-  );
-};
+**[Join Ibex support slack channel](https://thegoatagency.slack.com/archives/C089WQJ69LM)**
 
 ### Feedback and Improvements
 We continuously develop and enhance our applications based on your needs. Share your ideas through:
