setting apps as pages
removed the folders for each app, not needed now. updated doc texts

--- a/pages/InfluencerSearch.mdx
+++ b/pages/InfluencerSearch.mdx
@@ -1,2 +1,5 @@
 ### Influencer Search
+
 Use this application to search through our database of previously activated creators with performance insights and campaign information
+
+**COMING SOON**
