Removing double titles

--- a/pages/BenchmarkIndex/bmIntro.mdx
+++ b/pages/BenchmarkIndex/bmIntro.mdx
@@ -1,8 +1,8 @@
-# Introduction to the benchmark index
+## Introduction to the benchmark index
 
 ### Navigation, troubleshooting & important information
 
-### IMPORTANT
+**IMPORTANT**
 
 Currencies displayed on report pages are \*INTERNAL\* costs. If information is shared with clients, it is crucial to apply the Goat margin or client-specific margin.
 
