--- a/pages/InfluencerSearch.mdx
+++ b/pages/InfluencerSearch.mdx
@@ -1,4 +1,4 @@
-### Influencer Search
+### Introduction
 
 Use this application to search through our database of previously activated creators with performance insights and campaign information
 
