--- a/pages/PerformanceAnalyser.mdx
+++ b/pages/PerformanceAnalyser.mdx
@@ -1,6 +1,4 @@
-### Performance Analyser
-
-## Introduction
+### Introduction
 
 Gain campaign insights for a campaign or brand across organic and paid.
 
