--- a/pages/ResourceManagement.mdx
+++ b/pages/ResourceManagement.mdx
@@ -1,5 +1,3 @@
-### Resource Management
-
-## Introduction
+### Introduction
 
 Access to the the campaign overview Monday board to see all active campaigns and their status.
