--- a/pages/WorkflowPlatform.mdx
+++ b/pages/WorkflowPlatform.mdx
@@ -1,5 +1,3 @@
-### Workflow Platform
-
-## Introduction
+### Introduction
 
 A quick link to the workflow platform for easy access to the familiar tools you need to access and manage your campaigns.
