--- a/pages/PerformanceAnalyser.mdx
+++ b/pages/PerformanceAnalyser.mdx
@@ -1,20 +1,203 @@
-### Introduction
 
-Gain campaign insights for a campaign or brand across organic and paid.
+### **1\. Introduction**
 
-Initially intended as a PCA data visualisation tool. While this is absolutly what it can be used for its capabilities go far beyond just that. 
+The Performance Analyser is a tool designed to provide campaign insights for a campaign or brand across both organic and paid channels. It allows users to analyse influencer performance, CPMs, CPAs, engagement rates, and other key metrics. While initially conceived as a PCA data visualisation tool, its capabilities extend far beyond that.
 
-The Performance Analyser is a tool designed to handle and analyze sensitive data, including information about influencers Cost Per Mille (CPMs), Cost Per Action (CPAs), engagement rates, etc. This data is primarily for internal use, with an automatic 0% margin setting.
+  
 
-It's important to be mindful of what information is shared with clients, especially in an undisclosed model where all data is based on internal costings without the correct margin applied.
+**Key Features:**
 
-The default view displays campaign codes from the past six months at a 0% margin. Users can filter this data by different brands and campaigns, such as the Mars Snickers' summer campaign. The application then pulls through all the influencers that the brand has engaged with over the selected time frame, providing insights on CPMs against engagement rate, impressions, and other metrics.
+*   Filtering by brand, campaign, platform, and post type.
+*   Adjustable time frame for data analysis.
+*   Comparison of different post types (e.g., TikTok vs. Instagram Reels).
+*   Custom graph creation for comparing various metrics (e.g., CPA vs. Engagement Rate).
 
-The application allows users to adjust the time frame beyond six months and filter data by platform and post types. It also enables comparison of different post types, like TikTok posts against Instagram reels, providing a comprehensive understanding of campaign performance.
+  
 
-Additionally ther is the option to create custom graphs, enabling users to compare different metrics like CPA against the engagement rate. This feature makes it easier to pull data into a PCA.
+**Use Cases:**
 
-The Performance Analyser application is highly customizable. If there are any graphs or data points not currently accessible but needed, users can reach out to have those added, provided the data is in the system.
+*   Analysing the performance of a specific campaign.
+*   Comparing the performance of different influencers.
+*   Identifying trends in engagement rates across different platforms.
+*   Creating data visualisations for PCA presentations.
 
-The Performance Analyser is client-focused, while the benchmark analysis provides industry-wide data over time. Using both together can provide powerful insights into how a brand is performing against industry standards. In the future, there are plans to create a client portal where clients can log in and access their data, excluding some costing data. This feature will be particularly beneficial for long-term clients.
+  
 
+### **2\. Getting Started**
+
+Log into IBEX using your Okta credentials. Once you're logged in, click on the "Performance Analyser" card within the dashboard.
+
+  
+
+**Basic Workflow:**
+
+1. Filter data by brand and campaign.
+2. Adjust the time frame as needed.
+3. Filter by platform and post type.
+4. Analyse the data and create custom graphs as needed.
+
+  
+
+#### **Feature 1: Campaign Code Filtering**
+
+This feature allows you to filter the data displayed by specific brands and campaigns.
+
+  
+
+**Steps:**
+
+1. In the "Brand" dropdown menu, select the desired brand. (Screenshot of the Brand dropdown)
+2. In the "Campaign" dropdown menu, select the desired campaign. (Screenshot of the Campaign dropdown)
+3. The data will be updated to display only the influencers and metrics associated with the selected brand and campaign.
+
+  
+
+**Example:** To view data for the Mars Snickers' summer campaign:
+
+1. Select "Mars" from the "Brand" dropdown.
+2. Select "Snickers Summer Campaign" from the "Campaign" dropdown.
+
+  
+
+**Best Practices:** Use this feature to focus your analysis on specific campaigns of interest.
+
+  
+
+#### **Feature 2: Time Frame Adjustment**
+
+This feature allows you to adjust the time frame for the data displayed.
+
+  
+
+**Steps:**
+
+1. Use the date picker to select a start date and end date. (Screenshot of the date picker)
+2. The data will be updated to display only the influencers and metrics within the selected time frame.
+
+  
+
+**Example:** To view data for the past year:
+
+1. Set the start date to one year ago from today.
+2. Set the end date to today.
+
+  
+
+**Best Practices:** Adjust the time frame to identify trends over time.
+
+  
+
+#### **Feature 3: Platform and Post Type Filtering**
+
+This feature allows you to filter the data by platform (e.g., Instagram, TikTok) and post type (e.g., Reels, Posts).
+
+  
+
+**Steps:**
+
+1. In the "Platform" dropdown menu, select the desired platform. (Screenshot of the Platform dropdown)
+2. In the "Post Type" dropdown menu, select the desired post type. (Screenshot of the Post Type dropdown)
+3. The data will be updated to display only the influencers and metrics for the selected platform and post type.
+
+  
+
+**Example:** To compare TikTok posts against Instagram Reels:
+
+1. Select "TikTok" from the "Platform" dropdown and "Posts" from the "Post Type" dropdown.
+2. Note the performance metrics.
+3. Select "Instagram" from the "Platform" dropdown and "Reels" from the "Post Type" dropdown.
+4. Compare the performance metrics.
+
+  
+
+**Best Practices:** Use this feature to understand which platforms and post types are performing best for your campaigns.
+
+  
+
+#### **Feature 4: Custom Graph Creation**
+
+This feature allows you to create custom graphs to compare different metrics, such as CPA against engagement rate.
+
+  
+
+**Steps:** (Detailed steps will depend on the specific implementation of the graph creation feature)
+
+1. Click on the "Create Custom Graph" button. (Screenshot of the button)
+2. Select the metrics you want to compare from the available options. (Screenshot of the metric selection options)
+3. Customize the graph settings (e.g., chart type, axis labels). (Screenshot of the graph settings)
+4. Click "Generate Graph." (Screenshot of the button)
+
+  
+
+**Example:** To create a graph comparing CPA against engagement rate:
+
+1. Click "Create Custom Graph."
+2. Select "CPA" as the X-axis metric.
+3. Select "Engagement Rate" as the Y-axis metric.
+4. Click "Generate Graph."
+
+  
+
+**Best Practices:** Use custom graphs to visualize relationships between different metrics and identify areas for improvement.
+
+  
+
+### **3\. Example Scenarios**
+
+#### **Scenario 1: Analyzing Influencer Performance for a Specific Campaign:**
+
+1. Select the relevant brand and campaign using the Campaign Code Filtering feature.
+2. Review the CPMs, CPAs, and engagement rates for each influencer.
+3. Identify the top-performing influencers and analyze their content to understand what is working well.
+
+  
+
+#### **Scenario 2: Comparing Platform Performance:**
+
+1. Use the Platform and Post Type Filtering feature to compare the performance of different platforms (e.g., Instagram vs. TikTok).
+2. Analyze the CPMs, CPAs, and engagement rates for each platform.
+3. Identify which platforms are providing the best return on investment.
+
+  
+
+### **4\. Data Sensitivity & Margin Considerations**
+
+**Important****:** The Performance Analyser handles sensitive data, including influencer CPMs, CPAs, and engagement rates. This data is primarily for internal use.
+
+  
+
+**Margin:** The default view displays data at a 0% margin.
+
+  
+
+**Client Communication:** Be mindful of what information is shared with clients, especially in an undisclosed model where all data is based on internal costings without the correct margin applied. Always ensure the appropriate margin is applied before sharing costing data with clients.
+
+  
+
+### **5\. Troubleshooting & FAQs**
+
+**Q: Why is the data not updating after I select a brand and campaign?**
+
+**A:** Ensure that the selected brand and campaign have data available within the selected time frame.
+
+  
+
+**Q: How do I add a new metric to the custom graph creation feature?**
+
+**A:** Contact the development team to request the addition of the new metric, provided the data is available in the system.
+
+  
+
+### **6\. Feedback & Future Development**
+
+The Performance Analyser is highly customizable. If there are any graphs or data points not currently accessible but needed, users can reach out to have those added, provided the data is in the system.
+
+  
+
+Plans are in place to create a client portal where clients can log in and access their data, excluding some costing data. This feature will be particularly beneficial for long-term clients.
+
+  
+
+The Performance Analyser is client-focused, while the benchmark analysis provides industry-wide data over time. Using both together can provide powerful insights into how a brand is performing
+
+against industry standards.
