--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -29,7 +29,7 @@ Once logged in, you'll see the main dashboard - your central hub for all applica
 
 ### Ibex support channel
 
-[Join Ibex support slack channel](https://thegoatagency.slack.com/archives/C089WQJ69LM)
+[Ibex support slack channel](https://thegoatagency.slack.com/archives/C089WQJ69LM)
 
 ### Feedback and Improvements
 We continuously develop and enhance our applications based on your needs. Share your ideas through:
@@ -41,3 +41,7 @@ Whether you've spotted a small bug or have a major feature request, we welcome a
 
 Best regards,
 Team Ibex
+
+
+
+
