--- a/pages/BenchmarkIndex/bmIntro.mdx
+++ b/pages/BenchmarkIndex/bmIntro.mdx
@@ -20,12 +20,12 @@ For easier access, one default organic view has been created showcasing the most
 
 Each page contains various visualizations (charts, graphs, tables) that present data in different ways. Hovering your mouse over data points in the visualizations reveals more detailed information. Within each visualization you can also enter into Focus Mode available at the top right corner of each visual.
 
-### Slicers:
+### Filters:
 
-The white boxes at the top of each page are slicers. They act as filters for the data. Selecting a value in a slicer (e.g., "United Kingdom" in the Location slicer) will filter all visualizations on the current page to show only data related to that selection.
+The white boxes at the top of each page are filters. They act as filters for the data. Selecting a value in a filter (e.g., "United Kingdom" in the Location filter) will filter all visualizations on the current page to show only data related to that selection.
 
-*   You can select multiple values in slicers by holding down Ctrl/Cmd while clicking.
-*   Clearing a slicer selection with the eraser icon at the top will remove the selections on that slicer.
+*   You can select multiple values in filters by holding down Ctrl/Cmd while clicking.
+*   Clearing a filter selection with the eraser icon at the top will remove the selections on that filter.
 
 ### Interactivity:
 
@@ -36,33 +36,24 @@ The report is interactive meaning that clicking on elements within a visualizati
 The top right corner of each page displays a summary statistics displaying how many benchmarks are in use to generate the specific data you're looking at.
 
 ### Tooltips:
-
 Hover over each visual to reveal multiple tooltips. Ones that are extra useful are
 
 **Focus Mode**
-
 *   Makes your selected visual larger, useful where you have many data points.
 
 **Show as Table**
-
 *   Brings it into Focus Mode and displays the data in table format.
 
   
 
 ## Troubleshooting
 
-  
-
 If you're unable to identify a specific option, check your filters. Applying filters limits the visible data. Each slicer has an eraser on the top right corner, use this to erase your selections.
 
-  
 
 Resting all filters is achieved by clicking on the green arrow at the top right of the page. This defaults the view to the data range 1 year back in time with no other filters applied.
+ 
+If you have questions regarding the functionality or data, reach out to the team on the support channel on the slack [Ibex support slack channel](https://thegoatagency.slack.com/archives/C089WQJ69LM).
 
-  
-
-If you have questions regarding the Report functionality reach out to [martin.leivagodoy@groupm.com](mailto:martin.leivagodoy@groupm.com)
-
-  
-
-If you have questions regarding the data, reach out to x and x.
+For data queries please tag Ed Sparks, CJ Murray or Ben Kilby.  
+For functionality queries please tag Martin Leiva-Godoy.
